--- a/styles/main.css
+++ b/styles/main.css
@@ -2,19 +2,21 @@ body {
   display: flex;
   flex-direction: column-reverse;
   height: 100vh;
+  background: #000;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .footer-container {
-  width: 1400px;
+  width: 1200px;
   max-width: 1400px;
   height: 450px;
-  padding: 0 40px;
-  background-color: #1b2e3c;
+  padding-left: 40px;
+  background-color: #242538;
   display: flex;
   flex-direction: row;
 }
@@ -23,7 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 35%;
-  background-color: #30334c;
+  background-color: #2b2d45;
   padding: 40px 70px;
 }
 
@@ -33,8 +35,9 @@ body {
 }
 
 .left-section-container h3 {
-  margin-top: 20px;
-  color: #fff;
+  margin-top: 25px;
+  color: #e2e2e2;
+  line-height: 1.3;
 }
 
 .text-title {
@@ -52,6 +55,76 @@ body {
   flex-direction: column;
 }
 
+.right-section {
+  padding: 20px 30px 30px 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+}
+.section1 {
+  display: flex;
+  flex-direction: row;
+  gap: 150px;
+  color: #fff;
+  padding: 10px;
+  font-weight: 700;
+}
+.section2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 3px;
+  margin-top: 10px;
+}
+.svg {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.email {
+  margin-left: 97px;
+}
+.email input {
+  padding: 10px 10px;
+  width: 300px;
+  background-color: #424460;
+  border: none;
+  margin-left: 16px;
+  color: #fff;
+}
+
+.email input::placeholder {
+  color: rgb(191, 187, 187);
+}
+.email input:focus {
+  outline: none;
+}
+button {
+  background-color: #3171f0;
+  border: none;
+  width: 80px;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+button img {
+  width: 30px;
+  height: 31px;
+}
+
+.border {
+  height: 1px;
+  background-color: grey;
+  width: 98%;
+  margin: 50px auto;
+}
 .container {
   margin: 25px auto;
 }
