--- a/styles/main.css
+++ b/styles/main.css
@@ -104,17 +104,17 @@ body {
 .email input:focus {
   outline: none;
 }
-button {
+#email-btn {
   background-color: #3171f0;
   border: none;
   width: 80px;
   cursor: pointer;
 }
 
-button:hover {
+#email-btn:hover {
   opacity: 0.8;
 }
-button img {
+#email-btn img {
   width: 30px;
   height: 31px;
 }
@@ -124,6 +124,70 @@ button img {
   background-color: grey;
   width: 98%;
   margin: 50px auto;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+
+  padding-left: 7px;
+}
+.footer h3 {
+  color: #fff;
+  font-weight: bold;
+}
+
+.footer p:nth-child(2) {
+  margin-top: 10px;
+}
+
+.footer p {
+  color: rgb(207, 200, 200);
+  font-size: 14px;
+  cursor: pointer;
+}
+.footer p:hover {
+  color: #fff;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  flex-shrink: 0;
+}
+
+.service {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  flex-shrink: 0;
+  margin-left: 140px;
+}
+.contact {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-left: 100px;
+}
+
+.call-to-action {
+  margin-top: 25px;
+  padding-left: 2px;
+}
+
+.footer-btn {
+  background-color: #1389ea;
+  border: none;
+  padding: 8px 10px;
+  width: 20%;
+  cursor: pointer;
+  color: #fff;
+  letter-spacing: 2px;
+}
+
+.footer-btn:hover {
+  opacity: 0.8;
 }
 .container {
   margin: 25px auto;
